--- a/asset/css/layout.css
+++ b/asset/css/layout.css
@@ -51,6 +51,9 @@ ul.navbar-item {
 img.icon {
   width: 25px;
   height: 25px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center center;
 }
 p.count {
   position: absolute;
