--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -6,35 +6,114 @@
 }
 
 .content-wrapper.hide {
-    margin-left: 0;
-   
+  margin-left: 0;
 }
 .top-chart-earn {
-    border-radius: 5px;
-    padding-top: 15px;
-    box-shadow: -2px 3px 13px 0px #ddd6;
+  border-radius: 5px;
+  padding-top: 15px;
+  box-shadow: -2px 3px 13px 0px #ddd6;
 }
 
 .last-month {
-    line-height: 20px;
-    text-align: center;
-
+  line-height: 20px;
+  text-align: center;
 }
 .last-month h5 {
-    font-size: 20px;
-    font-weight: 600;
+  font-size: 20px;
+  font-weight: 600;
 }
 .last-month p {
-    font-size: 12px;
-    color: #777;
-    font-weight: 600;
+  font-size: 12px;
+  color: #777;
+  font-weight: 600;
 }
 .earn {
-    margin: 12px 0;
-
+  margin: 12px 0;
 }
 
 .earn h2 {
-      font-size: 20px;
-    font-weight: 600;
+  font-size: 20px;
+  font-weight: 600;
+}
+.chart-nav {
+  color: var(--second-color);
+  padding: 0 15px;
+  transition: 0.3s;
+  border-radius: 0;
+}
+.chart-nav:hover {
+  color: var(--main-color);
+}
+.chart-nav.active {
+  background-color: transparent !important;
+  color: var(--main-color) !important;
+  border-bottom: 2px solid var(--main-color);
+  border-radius: 0;
+}
+.chart-header-tabs {
+  width: 100%;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+/* =======================================admin list =================== */
+.admin-list {
+  padding: 10px;
+  border-radius: 5px;
+  background: var(--white-color);
+  box-shadow: -2px 3px 13px 0px #ddd6;
+}
+img.admin-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.admin-ac-title {
+  font-size: 15px;
+  font-weight: 600;
+  padding: 0 5px;
+  display: inline-block;
+  color: var(--main-color);
+  border-bottom: 2px solid var(--main-color);
+  line-height: 1.5;
+  margin-bottom: 13px;
+}
+
+li.admin-li {
+  display: flex;
+  align-items: center;
+  margin: 3px 0;
+  padding: 10px;
+}
+.admin-ac-details {
+  padding-left: 10px;
+  line-height: 18px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+a.admin-name {
+  font-size: 15px;
+  font-weight: 500;
+  color: var(--second-color);
+  transition: 0.3s;
+
+}
+a.admin-name:hover {
+  color: var(--main-color);
+}
+p.activity-text {
+  font-size: 11px;
+  color: #989898;
+}
+
+.status {
+  text-align: left;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
 }
